
20110213:  The conversion to a script based app is pretty much complete. Still tying up a few loose ends.
           I will focus on tweaking the API where needed, and fix bugs. Features are almost completed with
           the exception of back testing. However, back testing can be done by scripting if desired right now,
           just more tedious without any plugins to assist. Back testing functions will be added later once
           the main app and API has been finalized.

           Also working on updating the docs.

20110214:  Moved the remaining main toolbar elements to the status bar. Main toolbar now removed to make more
           room for future enhancements. The zoom buttons, bar length, date range and recent chart controls
           are converted to buttons with popup menus.

20110215:  More experimenting with gui elements. Moved the bottom toolbar and placed it above the plot slider.
           I am trying to put all the app controls together as close as possible to minimize mouse travel and
           maximize efficiency. Will keep refining it until I am happy with it.

20110217:  Fixed SCRIPT_RETURN_DATA plugin to ignore empty key.

           Fixed YAHOO plugin empty symbols when downloading.

           Fixed QUOTE_DATABASE_SET plugin date format. TYPE parm now defaults to 'Stock' if not used.

           Consolidated some control panel buttons into the configure button.

20110218:  Updated icons.

           Added context menu to the data panel that allows number precision to be set.

           Updated Grid, Refresh and Crosshair control panel buttons to have context menus for settings.

20110219:  Added new plugins FILE_DIALOG and INDICATOR_PLOT_INDEX_DELETE

           Added new CSV scripts into Scripts/quote

           Modified the QUOTE_DATABASE_SET syntax with a DATE_FORMAT parm to help with various date formats.

           Added new indicators DonchianChannels.pl and CandlePatterns.pl and ROC1.pl
