@@ -15,6 +15,7 @@ To Do:
 - add yahoo details code selection to the yahoo plugin (default is only name now)
 - chart zooming
 - add a date widget to charts that mimic 'the new style' we see on yahoo and google charts.
+- add defaults to all the plugins so we can cut down on explicit parms
 
 
 Priority
